fix swagger, delete old code
